force-app/main/default/objects/AcctSeed__Billing__c/fields/Billing_Number__c.field-meta.xml
<CustomField>
    <fullName>Billing_Number__c</fullName>
    <formula>HYPERLINK(&apos;/&apos;+Id, 
IF(Invoice_Number__c==&apos;&apos;,Name,Invoice_Number__c),
 &apos;_blank&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Number</label>
    <type>Text</type>
</CustomField>