force-app/main/default/objects/AcctSeed__Billing__c/fields/Freight_Terms__c.field-meta.xml
<CustomField>
    <fullName>Freight_Terms__c</fullName>
    <label>Freight Terms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FFA</fullName>
            </value>
            <value>
                <fullName>PPA</fullName>
            </value>
            <value>
                <fullName>3rd Party</fullName>
            </value>
            <value>
                <fullName>Collect</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>