force-app/main/default/objects/AcctSeed__Billing__c/fields/Is_Posted__c.field-meta.xml
<CustomField>
    <fullName>Is_Posted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Posted</label>
    <type>Checkbox</type>
</CustomField>