force-app/main/default/objects/AcctSeed__Billing__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <formula>AcctSeed__Opportunity__r.Opportunity_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity</label>
    <type>Text</type>
</CustomField>